tests/spec/compile-fail/040_box_interface_missing_send_thread.zn
// category: compile-fail
// profile: hosted
// purpose: Box<Interface> does not preserve Send unless the interface object type includes Send

module tests.fail.boxInterfaceMissingSendThread;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.Result;
import std.thread.Thread;

interface Identified {
    fn id(self) -> U32;
}

struct Service: Copy {
    idValue: U32,
}

impl Identified for Service {
    fn id(self) -> U32 {
        return self.idValue;
    }
}

fn bad(mut allocator: GlobalAllocator) -> Result<Unit, AllocError> {
    val service = Service { idValue: 9 };
    val boxed: Box<Identified> = Box.newIn(move service, mut allocator);
    val handle = try Thread.spawn(move () -> U32 {
        return boxed.id(); // expected-error: Box<Identified> is not Send; use a named interface that includes Send
    });
    val ignored = handle;
    return Ok(());
}
